# nes-sim

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md
docs/: mmc3-irq-notes.md
examples/: analyze_state.rs  desktop_frontend.rs  export_frame.rs  hash_frame.rs
nes-debug/: eslint.config.js  package.json  pnpm-lock.yaml
nes-debug/public/: audio-processor.js
nes-debug/src/: App.vue  nes-lut.ts  palette.ts  style.css
nes-debug/src-tauri/: Cargo.toml  tauri.conf.json
nes-debug/src-tauri/src/: emulator.rs  lib.rs  main.rs
nes-debug/src/components/: AudioPanel.vue  BreakpointPanel.vue  CpuPanel.vue  GameScreen.vue  MemoryView.vue  NametableView.vue  PatternTableView.vue  PpuPanel.vue  StatusPanel.vue  ToolBar.vue
nes-debug/src/composables/: useAudioPlayer.ts  useEmulator.ts
nes-debug/src/types/: index.ts
nes-desktop/: Cargo.toml
nes-desktop/src/: main.rs  tests.rs
nes-sim/: Cargo.toml  DEBUG.md
nes-sim/src/: api.rs  apu.rs  bus.rs  cartridge.rs  cpu.rs  input.rs  lib.rs  ppu.rs  ppu_memory.rs  savestate.rs  video.rs
nes-sim/src/apu/: pulse.rs
nes-sim/src/cartridge/: mappers.rs
nes-sim/src/cartridge/mappers/: anrom.rs  bnrom.rs  cprom.rs  fme7.rs  irem_h3001.rs  irem_tams1.rs  mapper118.rs  mapper152.rs  mapper162.rs  mapper46.rs  mapper70.rs  mapper72.rs  mmc1.rs  mmc3.rs  mmc5.rs  namco163.rs  nrom.rs  taito_x1005.rs  vrc2.rs  vrc4.rs  vrc6.rs
nes-sim/src/tests/: mod.rs
src/: api.rs  apu.rs  bus.rs  cartridge.rs  cpu.rs  dma.rs  headless.rs  input.rs  lib.rs  ppu.rs  ppu_memory.rs  runtime.rs  video.rs
src/apu/: dmc.rs  mod.rs  noise.rs  tests.rs  triangle.rs
src/apu/tests/: mod.rs
src/cartridge/: mappers.rs  mod.rs  tests.rs
src/cartridge/expansion_audio/: mod.rs  namco163.rs  sunsoft5b.rs  vrc6.rs
src/cartridge/mappers/: camerica.rs  cnrom.rs  colordreams.rs  fme7.rs  gxrom.rs  irem76.rs  irem_g101.rs  irem_tams1.rs  jf13.rs  jf19.rs  mapper115.rs  mapper118.rs  mapper152.rs  mapper162.rs  mapper36.rs  mapper46.rs  mapper62.rs  mapper70.rs  mapper72.rs  mapper78.rs  mapper87.rs  mapper94.rs  mmc1.rs  mmc3.rs  mmc5.rs  mod.rs  namco163.rs  namco3433.rs  nina003.rs  nrom.rs  sunsoft3.rs  taito0190.rs  taito_x1005.rs  taito_x1017.rs  tqrom.rs  uxrom.rs  vrc2.rs  vrc4.rs  vrc6.rs
src/cartridge/tests/: mod.rs
src/cpu/: mod.rs
src/cpu/tests/: addressing.rs  dma.rs  execution.rs  mod.rs  reset.rs
src/ppu/: mod.rs  tests.rs
src/ppu/tests/: mod.rs
src/tests/: mod.rs
