[workspace]
members = ["nes-sim", "nes-desktop"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/taiyuuki/nes-sim"
homepage = "https://github.com/taiyuuki/nes-sim"
keywords = ["nes", "game", "emulator", "nintendo"]

[workspace.dependencies]
nes-sim = { version = "0.1.1", path = "nes-sim" }
cpal = "0.16.0"
minifb = "0.28.0"

[profile.release]
lto = "fat"
codegen-units = 1
