[package]
name = "nes-sim"
version = "0.1.2"
description = "A NES (Famicom) emulator core library written in pure Rust."
readme = "../README.md"
documentation = "https://docs.rs/nes-sim"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[features]
default = []
debug = []

[package.metadata.scripts]
test-all = "cargo test -p nes-sim"
build = "cargo build -p nes-sim --release"
build-debug = "cargo build -p nes-sim --features debug"
dry-publish = "cargo publish -p nes-sim --dry-run"
publish = "cargo publish -p nes-sim"
