[package]
name = "nes-debug"
version = "0.1.0"
description = "NES Emulator Debug Tool"
authors = ["taiyuuki"]
edition = "2021"

[lib]
name = "nes_debug_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nes-sim = { path = "../../nes-sim", features = ["debug"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
